<?xml version="1.0" encoding="utf-8"?>

<!--Student Number: 301170707-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlexanderActivity">

    <!--Title for the activity-->
    <TextView
        android:id="@+id/activity_alexander_title"
        style="@style/title_text_view"
        android:text="@string/activity_alexander_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Insert Stocks button-->
    <Button
        android:id="@+id/insert_stocks_button"
        style="@style/regular_buttons"
        android:text="@string/insert_stocks_button_text"
        android:onClick="insertStocks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_alexander_title" />

    <!--Title for the stock symbol radio group-->
    <TextView
        android:id="@+id/select_stock_radio_group_title"
        style="@style/radio_group_title_text_view"
        android:text="@string/select_stock_radio_group_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_stocks_button" />

    <!--Select stock radio group-->
    <RadioGroup
        android:id="@+id/select_stock_radio_group"
        style="@style/radio_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_stock_radio_group_title">

        <!--Select stock radio buttons-->
        <RadioButton
            android:id="@+id/select_GOOGL_radiobutton_option"
            style="@style/radio_button"
            android:checked="true"
            android:text="@string/select_GOOGL_radiobutton_option_text" />
        <RadioButton
            android:id="@+id/select_AMZN_radiobutton_option"
            style="@style/radio_button"
            android:text="@string/select_AMZN_radiobutton_option_text" />
        <RadioButton
            android:id="@+id/select_SSNLF_radiobutton_option"
            style="@style/radio_button"
            android:text="@string/select_SSNLF_radiobutton_option_text" />

    </RadioGroup>

    <!--Display stock info button-->
    <Button
        android:id="@+id/display_stock_info_button"
        style="@style/regular_buttons"
        android:text="@string/display_stock_info_button_text"
        android:onClick="displayStocksInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_stock_radio_group" />

    <!--Text view to display the chosen stock info from the radio group and it's relevant information-->
    <TextView
        android:id="@+id/stock_info_display_text_view"
        style="@style/regular_text_view"
        android:text=""
        android:textAlignment="inherit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_stock_info_button" />

</androidx.constraintlayout.widget.ConstraintLayout>